syntax = "proto3";
 
package token;


service TokenService{
    rpc VerifyToken(VerificationRequest) returns (VerificationResponse);
    rpc RenewToken(RenewTokenRequest) returns (TokenInfo); 
}


message Empty{
}

message VerificationRequest{
    string access_token = 1;
    string agent = 2;
}

message VerificationResponse {
    int32 user_id = 1;
    int32 session_id = 2;
}

message RenewTokenRequest{
    string access_token = 1;
    string refresh_token = 2;
    string agent = 3;
    string ip = 4;
}
message TokenInfo{
    string access_token = 1;
    string refresh_token = 2;
    int32 expiry = 3;
}